# pi5-system-surrogate

./: .gitignore  .gitmodules  LICENSE  NOTICE.md  README.md
.github/workflows/: ci.yml
daemon/: CMakeLists.txt  README.md  pi5-system-surrogate.service
daemon/cmake/: FindWPILibNative.cmake
daemon/src/: cadence_tracker.cpp  cadence_tracker.hpp  check_server_ready.cpp  control_data_encoder.cpp  control_data_encoder.hpp  control_data_publisher.cpp  control_data_publisher.hpp  daemon_state.cpp  daemon_state.hpp  diagnostics_publisher.cpp  diagnostics_publisher.hpp  gamepad_ingest.cpp  gamepad_ingest.hpp  imu_publisher.cpp  imu_publisher.hpp  libgpiod_backend.cpp  libgpiod_backend.hpp  linux_runtime.cpp  linux_runtime.hpp  main.cpp  match_controller.cpp  match_controller.hpp  nt_server.cpp  nt_server.hpp  nt_smartio_test.cpp  nt_topics.hpp  null_gpio_backend.hpp  periodic_task.hpp  rsl_blinker.cpp  rsl_blinker.hpp  smartio_bridge.cpp  smartio_bridge.hpp  smartio_state.cpp  smartio_state.hpp  web_ui.cpp  web_ui.hpp
daemon/tests/: CMakeLists.txt  test_cadence_tracker.cpp  test_control_data_encoder.cpp  test_control_data_publisher.cpp  test_daemon_state.cpp  test_diagnostics_publisher.cpp  test_gamepad_ingest.cpp  test_imu_publisher.cpp  test_linux_runtime.cpp  test_match_controller.cpp  test_nt_server.cpp  test_rsl_blinker.cpp  test_smartio_bridge.cpp  test_smartio_state.cpp  test_smoke.cpp  test_web_ui.cpp
dev-emulation/: README.md  run-integration-test.sh  run-match-test.sh  setup-gpio-sim.sh  setup-vcan.sh  teardown-gpio-sim.sh  teardown-vcan.sh
docs/: architecture.md  daemon-design.md  systemcore-vs-pi5.md
hal-port/: README.md  build.sh
hal-port/gradle/: toolchain-override.gradle
pi-os/: 50-frc-eth.network.tmpl  80-can_s0.network  90-frc-can.rules  README.md  frc-network-render  frc-network.service
sample-robot/: README.md  build.gradle.kts  settings.gradle.kts
sample-robot/src/main/java/: DaemonTester.java
